<resources>
    <string name="app_name">GuvencApp</string>
    <string name="guvenc">G&#220;venc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="google_maps_key">AIzaSyCWba98zpqIpI39KnegY-Thsz67VA_NPwc</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="logo_description">Machinery Import &amp; Export Experts.</string>
    <string name="copy_right">Machinery Import &amp; Export Expert.</string>
    <string name="copy_right_desc">&#169; All Rights Reserved</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_link">Not Registered Yet? Sign up</string>
    <string name="login_link">Already Registered. Log In</string>
    <string name="name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="email_empty_error">Email cannot be empty.</string>
    <string name="name_empty_error">User name cannot be empty.</string>
    <string name="password_empty_error">Password field cannot be empty.</string>
    <string name="password_mismatch_error">Sorry the two passwords does not match.</string>
    <string name="user_registration_failure">Creating new account failed. Please try again or contact support.</string>
    <string name="user_registration_successful">New user created successfully.</string>
    <string name="login_successful">Login Successful</string>
    <string name="password_length_error">Sorry password must be alteast 6 characters long.</string>
    <string name="email_invalid_error">Email is invalid. Please enter correct email.</string>
    <string name="login_description">Log In To Experience More</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="loading">Loading...</string>
    <string name="wait">Please wait</string>
    <string name="add_category">Add Category</string>
    <string name="add_product">Add Product</string>
    <string name="slect_image">Select Image</string>
    <string name="add_image">Add Image</string>

    <string name="select_picture">Select Picture</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="add_category_image">Add Category Image</string>
    <string name="add_image_or_change_image">Add/Change Image</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="save">Save</string>
    <string name="SAVE">SAVE</string>
    <string name="category_name_empty">Category name cannot be empty.</string>
    <string name="product_name_empty">Product name cannot be empty.</string>
    <string name="select_product_category">Please select product category.</string>
    <string name="add_category_name">Add Category Name</string>
    <string name="category_added_successful">Product category added successfully</string>
    <string name="adding_product_success">Product added successfully</string>
    <string name="category_addition_failure">Adding new product category failed</string>
    <string name="adding_product_failure">Adding new product failed</string>
    <string name="saving_wait">Saving please wait...</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_product_price">Enter product price</string>
    <string name="enter_product_width">Product width</string>
    <string name="enter_product_length">Product length</string>
    <string name="enter_product_weight">Product weight</string>
    <string name="enter_other_details">More product details.</string>
    <string name="add_product_details">Add Product Details</string>
    <string name="add_product_image">Add Product Image</string>
    <string name="enter_product_material">Product material</string>
    <string name="products">Products</string>
    <string name="all_products">All Products</string>
    <string name="product_details">Product Details</string>
    <string name="dashboard">Dashboard</string>
    <string name="product_location">Product Location</string>
    <string name="enter_product_capacity">Product capacity</string>
    <string name="enter_product_performance">Performance</string>
    <string name="enter_product_location">Location</string>
    <string name="enter_product_height">Height</string>
    <string-array name="imagePicker">
        <item>From Gallery</item>
        <item>From Camera</item>
    </string-array>
</resources>
