<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_red_400_24dp"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/all_products"
            android:icon="@drawable/ic_all_inclusive_red_400_24dp"
            android:title="@string/all_products" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_call_red_400_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_lock_open_red_400_24dp"
            android:title="@string/logout" />
    </group>


</menu>
