<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Welcome.ui.WelcomeActivity"
    android:layout_margin="10dp"
    tools:showIn="@layout/activity_welcome">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/logo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/logo_description"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:text="@string/login"/>
    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:text="@string/signup"/>
</LinearLayout>