<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/bacground_gradient"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Welcome.ui.WelcomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/g2"
        />

    <TextView
        android:id="@+id/logo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        android:fontFamily="@font/ocramedium"
        android:text="@string/logo_description"
        android:layout_marginBottom="20dp"/>
    <!--<com.airbnb.lottie.LottieAnimationView-->
        <!--android:id="@+id/animation_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:scaleType="centerCrop"-->
        <!--app:lottie_rawRes="@raw/sleepingant"-->
        <!--android:layout_margin="10dp"-->
        <!--app:lottie_loop="true"-->
        <!--app:lottie_autoPlay="true" />-->
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineAmbientShadowColor="@color/colorAccent"
        android:outlineSpotShadowColor="@color/colorAccent"
        android:shadowColor="@color/colorAccent"
        android:textColorHighlight="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:layout_margin="10dp"
        android:hint="@string/email"/>
</com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:outlineAmbientShadowColor="@color/colorAccent"
            android:outlineSpotShadowColor="@color/colorAccent"
            android:shadowColor="@color/colorAccent"
            android:textColorHighlight="@color/colorAccent"
            android:textColorLink="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:layout_margin="10dp"
            android:hint="@string/password"
           />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AVLoadingIndicatorView"
            android:visibility="visible"
            app:indicatorName="LineScalePulseOutRapidIndicator"
            app:indicatorColor="@color/white"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/loading"/>
    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/signup_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:text="@string/signup_link"/>
</LinearLayout>
</ScrollView>