<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">
    <LinearLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AVLoadingIndicatorView"
            android:layout_gravity="center"
            android:visibility="visible"
            app:indicatorName="LineScalePulseOutRapidIndicator"
            app:indicatorColor="@color/colorPrimary"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="@string/saving_wait"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_name_ll"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin ="10dp"
        android:visibility="visible"
        android:focusable="true"
        android:focusedByDefault="true"
        android:focusableInTouchMode="true"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_category_name"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:background="@color/colorLightGray"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="left"
            android:layout_margin="10dp"
            android:drawablePadding="5dp"
            android:textColor="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_keyboard_arrow_left_red_400_24dp"
            android:text="@string/ms_back"/>
        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_margin="10dp"
            android:drawablePadding="5dp"
            android:textColor="@color/colorPrimary"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_red_400_24dp"
            android:text="@string/SAVE"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
